--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,11 @@ access to large in-memory datasets.
     <maven>2.0.9</maven>
   </prerequisites>
   <dependencies>
+     <!-- and for testing, JUnit is needed -->
     <dependency>
-      <groupId>org.testng</groupId>
-      <artifactId>testng</artifactId>
-      <version>5.11</version>
-      <classifier>jdk15</classifier>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>[4.0.0,5.0.0)</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -34,8 +34,8 @@ access to large in-memory datasets.
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.5</source>
+          <target>1.5</target>
         </configuration>
       </plugin>
       <plugin>
@@ -45,6 +45,42 @@ access to large in-memory datasets.
           <excludedGroups>slow</excludedGroups>
         </configuration>
       </plugin>
+        <plugin><!-- plug-in to attach source bundle in repo -->
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-source-plugin</artifactId>
+          <executions>
+            <execution>
+              <id>attach-sources</id>
+              <goals>
+                <goal>jar</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+
+        <!-- Plus, let's make jars OSGi bundles as well  -->
+        <plugin>
+          <groupId>org.apache.felix</groupId>
+          <artifactId>maven-bundle-plugin</artifactId>
+<!--version>2.0.0</version-->
+          <extensions>true</extensions>
+          <configuration>
+            <instructions>
+              <Bundle-Name>tr13</Bundle-Name>
+              <Bundle-SymbolicName>${pom.artifactId}</Bundle-SymbolicName>
+              <Bundle-Description>Compact binary tr13 for Java</Bundle-Description>
+              <Bundle-Vendor>ning.com</Bundle-Vendor>
+              <Import-Package>
+</Import-Package>
+              <Private-Package>
+</Private-Package>
+              <Export-Package>
+com.ning.tr13,
+com.ning.tr13.util
+</Export-Package>
+            </instructions>
+          </configuration>
+        </plugin>
     </plugins>
   </build>
 </project>
