--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>com.ning</groupId>
   <artifactId>tr13</artifactId>
   <name>Tr13</name>
-  <version>0.1.0</version>
+  <version>0.1.0-SNAPSHOT</version>
   <!-- TODO: as OSGi bundle -->
   <packaging>jar</packaging>
   <description>Library for building simple compact Tries, for space-efficient
@@ -76,4 +76,70 @@ com.ning.tr13.util
         </plugin>
     </plugins>
   </build>
+
+  <!-- Licensing -->
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+  <organization>
+    <name>Ning.com</name>
+    <url>http://www.ning.com</url>
+  </organization>
+
+  <!-- published using oss.sonatype.org: -->
+  <repositories>
+    <repository>
+      <id>sonatype</id>
+      <name>Sonatype</name>
+      <layout>default</layout>
+      <url>http://oss.sonatype.org/content/repositories/releases</url>
+      <releases>
+        <enabled>true</enabled>
+        <updatePolicy>daily</updatePolicy>
+        <checksumPolicy>warn</checksumPolicy>
+      </releases>
+    </repository>
+    <repository>
+      <id>maven</id>
+      <name>Maven</name>
+      <layout>default</layout>
+      <url>http://repo1.maven.org/maven2</url>
+      <releases>
+        <enabled>true</enabled>
+        <updatePolicy>daily</updatePolicy>
+        <checksumPolicy>warn</checksumPolicy>
+      </releases>
+    </repository>
+  </repositories>
+
+  <!-- Let's also try to automate deployments?
+    -->
+  <distributionManagement>
+    <snapshotRepository>
+      <id>sonatype-nexus-snapshots</id>
+      <name>Sonatype Nexus Snapshots</name>
+      <url>http://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>sonatype-nexus-staging</id>
+      <name>Nexus Release Repository</name>
+      <url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+
+<!--
+    <repository>
+      <uniqueVersion>false</uniqueVersion>
+      <id>sonatype-release</id>
+      <name>Sonatype Maven2 Repository</name>
+      <url>http://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+      <layout>default</layout>
+    </repository>
+-->
+
+  </distributionManagement>
+
 </project>
