--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>com.ning</groupId>
   <artifactId>tr13</artifactId>
   <name>Tr13</name>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>0.2.0-SNAPSHOT</version>
   <!-- TODO: as OSGi bundle -->
   <packaging>jar</packaging>
   <description>Library for building simple compact Tries, for space-efficient
@@ -13,10 +13,7 @@ access to large in-memory datasets.
   </description>
   <scm>
     <connection>scm:git:git://github.com/ning/tr13.git</connection>
-    <developerConnection>scm:git:git://github.com:ning/tr13.git</developerConnection>
-<!--
-    <url>scm:git:git://github.com/ning/tr13.git</url>
--->
+    <developerConnection>scm:git:git://github.com/ning/tr13.git</developerConnection>
   </scm>
   <prerequisites>
     <maven>2.0.9</maven>
