--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.ning</groupId>
   <artifactId>tr13</artifactId>
   <name>Ning-tr13</name>
-  <version>0.2.1-SNAPSHOT</version>
+  <version>0.2.1</version>
   <!-- TODO: as OSGi bundle -->
   <packaging>jar</packaging>
   <description>Library for building simple compact read-only Tries, for space-efficient
