[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>com.ning</groupId>
   <artifactId>tr13</artifactId>
   <name>Ning-tr13</name>
-  <version>0.3.0</version>
+  <version>0.3.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <description>Library for building simple compact read-only Tries, for space-efficient
 access to large in-memory datasets.
