--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@ access to large in-memory datasets.
   <scm>
     <connection>scm:git:git@github.com:ning/tr13.git</connection>
     <developerConnection>scm:git:git@github.com:ning/tr13.git</developerConnection>
-    <url>http://github.com/ning/tr13</url>    
+    <url>http://github.com/ning/tr13</url>
   </scm>
   <developers>
         <developer>
@@ -81,11 +81,22 @@ access to large in-memory datasets.
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>2.6.1</version>
           <configuration>
+              <source>1.6</source>
+              <target>1.6</target>
               <encoding>UTF-8</encoding>
               <links>
                   <link>http://java.sun.com/javase/6/docs/api/</link>
               </links>
           </configuration>
+          <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+          </executions>
       </plugin>
       <!-- Plus, let's make jars OSGi bundles as well  -->
       <plugin>
