--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@ access to large in-memory datasets.
       <plugin><!-- plug-in to attach source bundle in repo -->
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
+         <version>2.1.2</version>
           <executions>
             <execution>
               <id>attach-sources</id>
